tests/parse-fail/bad_module3.fl.0.exp
Error: bad_module3.fl(1,1): Expected module declaration, but found: mod
mod foo {
^         
}

